Minor fixes and a TODO

--- a/flows.tex
+++ b/flows.tex
@@ -60,7 +60,7 @@ An (\emph{atomic}) \emph{flow}\index{flow}\index{atomic flow|see{flow}} is a tup
 \mbox{if $\eta(\nu)=\acu$ then $\card{L_\nu}=2$ and $\card{U_\nu}=1$;}&
 \end{align*}
 %-------------------
-\item\label{ItAcycl} there is no sequence $\epsilon_1,\dots,\epsilon_h$ of edges of $V$ such that $\up(\epsilon_i)=\lo(\epsilon_{i+1\pmod h})$, for $1\le i\le h$;
+\item\label{ItAcycl} there is no sequence $\epsilon_1$, $\dots$, $\epsilon_h$ of edges of $V$ such that $\up(\epsilon_i)=\lo(\epsilon_{i+1\pmod h})$, for $1\le i\le h$;
 %-------------------
 \item\label{definition:AtomicFlow:item:PolarityAssignment} there is a \emph{polarity assignment}\index{flow!polarity assignment} $\pi\colon E\to\{\pmi,\ppl\}$ such that, for every $\nu\in V$,
 \begin{enumerate}
