--- a/global_transformations/threshold_formulae.tex
+++ b/global_transformations/threshold_formulae.tex
@@ -6,6 +6,8 @@ We present here the main construction of this paper, \emph{i.e.}, a class of der
 
 In the following, $\lfloor x\rfloor$ denotes the maximum integer $n$ such that $n\le x$.
 
+\TODO{Define threshold function.}
+
 There are several ways of encoding threshold functions into formulae, and the problem is to find, among them, an encoding that allows us to obtain Theorem~\vref{theorem:ThresholdDerivations}. Efficiently obtaining the property stated in Theorem~\vref{theorem:ThresholdDerivations} crucially depends also on the proof system we adopt.
 
 Threshold formulae realise boolean threshold functions, which are defined as boolean functions that are true if and only if at least $k$ of $n$ inputs are true (see \cite{Wege:87:The-Comp:vn} for a thorough reference on threshold functions). 
