Made 'the ai-decomposed form' into 'the canonical ai-decomposed form'

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -322,5 +322,5 @@ The only reason to insist on performing the transformations in the proof of Theo
 \end{remark}
 
 \begin{definition}\label{definition:TheAiDecomposedForm}
-Given a derivation $\Phi$, the $\ai$-decomposed form of $\Phi$ obtained as described in the proof of Theorem~\vref{theorem:aiDecomposedForm} is called \emph{the $\ai$-decomposed form of\/ $\Phi$}.
+Given a derivation $\Phi$, the $\ai$-decomposed form of $\Phi$ obtained as described in the proof of Theorem~\vref{theorem:aiDecomposedForm} is called \emph{the} (\emph{canonical}) \emph{$\ai$-decomposed form of\/ $\Phi$}\index{$\ai$-decomposed form!canonical}.
 \end{definition}
