Started using Notation and Convention macros

--- a/defs.tex
+++ b/defs.tex
@@ -17,6 +17,8 @@
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{example}[theorem]{Example}
+\newtheorem{notation}[theorem]{Notation}
+\newtheorem{convention}[theorem]{Convention}
 
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
