--- a/transformations.tex
+++ b/transformations.tex
@@ -118,9 +118,15 @@ We can proceed by structural induction on $\Phi$. For every formula in $\Phi$ we
 
 \TODO{Take notation out of remark.}
 
+%---------------
+\begin{notation}
+The derivation $\Psi$ obtained in the proof of Propostion~\vref{proposition:DerivationSubstitution} is denoted $\Phi\{a^\phi/\gamma\}$.
+\end{notation}
+%-------------
+
 %-------------
 \begin{remark}
-The derivation $\Psi$ obtained in the proof of Propostion~\vref{proposition:DerivationSubstitution} is denoted $\Phi\{a^\phi/\gamma\}$. The notion of substitution can be extended to allow $\phi$ to contain interaction and cut vertices, but we shall not need that in this thesis.
+The notion of substitution can be extended to allow $\phi$ to contain interaction and cut vertices, but we shall not need that in this thesis.
 \end{remark}
 %-----------
 
@@ -134,7 +140,7 @@ The derivation $\Psi$ obtained in the proof of Propostion~\vref{proposition:Deri
 \TODO{The labels on upper/lower edges do not fit with the labels used in the definition of four boxes.}
 
 %-------------
-\begin{remark}
+\begin{convention}
 To avoid ambiguity in Definitions~\vref{definition:FourBoxes}, \vref{definition:IsolatedSubflowRemoval}, \vref{definition:PathBreaker} and \vref{definition:MultipleIsolatedSubflowsRemoval} we have establish the following convention:
 Let $\boldsymbol\epsilon=\{\epsilon_1,\dots,\epsilon_n\}$, $\boldsymbol\iota=\{\iota_1,\dots,\iota_m\}$, $\boldsymbol{\epsilon'}=\{\epsilon'_1,\dots,\epsilon'_n\}$ and $\boldsymbol{\iota'}=\{\iota'_1,\dots,\iota'_m\}$, then, when we write
 \[
@@ -284,7 +290,7 @@ we mean
 }\quad,
 \]
 respectively. In other words, edges are not connected in unexpected ways.
-\end{remark}
+\end{convention}
 %-----------
 
 %======================================
