--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -223,7 +223,7 @@ Given two derivations
 for some atoms $a_1,\dots,a_n,b_1,\dots,b_m$, such that $\Phi$ and $\Psi$ have the same atomic flow, we say that $\Psi$ is an \emph{$\ai$-decomposed form of\/ $\Phi$}\index{$\ai$-decomposed form}.
 \end{definition}
 
-\begin{remark}\label{remark:AlternativeAiDecomposedForm}
+\begin{convention}\label{convention:AlternativeAiDecomposedForm}
 Given a derivation $\Phi$ and an $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{}{\SKS\setminus\{\aid,\aiu\}}
@@ -262,7 +262,7 @@ we sometimes want to single out only some of the interaction or cut instances. W
  }
 }\quad.
 \]
-\end{remark}
+\end{convention}
 %-----------
 
 \TODO{Alessio: The bound on the size of the $\ai$-decomposed form is clearly not tight. Is it ok?}
