--- a/formalism.tex
+++ b/formalism.tex
@@ -134,7 +134,7 @@ Given derivations $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$, $\vlder{\Phi_2}{}{\beta
  }
  \right)
 }
-\quad\mbox{and}\quad
+\qquad\mbox{and}\qquad
 \vlinf{\rho_1}{}
 {
  \left(
